--- a/VAE/notebooks/Rerun_experiments.ipynb
+++ b/VAE/notebooks/Rerun_experiments.ipynb
@@ -1079,7 +1079,7 @@
     "# Second one is replication where learning rate was increased to compensate for fewer training epochs\n",
     "experiment_from = 'replication_increased_lr' \n",
     "# Folder with experiments\n",
-    "base = \"VAE/experiments\"\n",
+    "base = \"Renyi-Divergence-Variational-Inference/VAE/experiments\"\n",
     "\n",
     "path = f'{base}/{experiment_from}/{dataset}/{experiment}'\n",
     "os.makedirs('results', exist_ok=True)"
